cmake_minimum_required(VERSION 3.5.1)
project(ctracker)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
set(CMAKE_BINARY_DIR "build")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(testctracker ${SOURCES})
